--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
 
     <!-- Custom styles for this template -->
     <link href="css/Portfolio.css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138230614-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-138230614-1');
+      </script>
+
 
   </head>
 
