Vanilla JS bookList App added to projects

--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
                 <img
                   class="img-fluid mb-5"
                   src="img/myBookList.jpg"
-                  alt="My Book List App"
+                  alt="MyBookList App"
                 />
               </a>
               <h4 class="text-center">
@@ -720,7 +720,7 @@
                   target="_blank"
                   rel="noopener noreferrer"
                 >
-                  Github Project
+                  Github Repositories
                 </a>
               </h4>
               <p class="mb-5">
@@ -795,7 +795,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary text-uppercase text-center mb-0">
-                Project Name
+                Employee Benifit System
               </h2>
               <hr class="star-dark mb-5" />
               <img
