--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <h3 id="college">DeVry University</h3>
             <h5>New York, NY</h5>
             <br />
-            <h4>Bachlor of Computer Information Systems</h4>
+            <h4>Bachelor of Computer Information Systems</h4>
             <h6>June, 2019</h6>
             <br />
           </div>
