--- a/index.html
+++ b/index.html
@@ -415,7 +415,8 @@
             <i class="devicon-css3-plain-wordmark"></i>
             <i class="devicon-javascript-plain"></i>
             <i class="devicon-jquery-plain-wordmark"></i>
-            <i class="devicon-angularjs-plain-wordmark"></i>
+<i class="devicon-angularjs-plain colored"></i>
+            <!—- <i class="devicon-angularjs-plain-wordmark"></i> —->
             <i class="devicon-mysql-plain-wordmark"></i>
             <i class="devicon-git-plain-wordmark"></i>
             <img src="img/Office-icon.png" alt="Microsoft Office icon" />
